Added Case Manager